# golfdb

./: .gitignore  CMakeLists.txt  README.md
HE3DB/: .gitignore  CMakeLists.txt
HE3DB/src/HEDB/comparison/: HomCompare.h  operators.cpp
HE3DB/src/HEDB/conversion/: seal_util.cpp  seal_util.h
HE3DB/test/: CMakeLists.txt  basic_query1.h  basic_query4.h  basic_query6.h  cache_filter.hpp  conversion.h  correction.h  dbe_test.cpp  evict_info.py  rlwe.hpp  serialize.h  tpch_q1.cpp  tpch_q1_c.cpp  tpch_q4.cpp  tpch_q4_c.cpp  tpch_q6.cpp  tpch_q6_c.cpp  tpch_q6_c_dbe.cpp  tpch_q6_c_lru.cpp  tpch_q6_throughput.cpp  tpch_run.sh  tpch_throughput.py
benchmark/: CMakeLists.txt
benchmark/precision/: CMakeLists.txt  precision.cu
benchmark/precision_cache/: CMakeLists.txt  precision_cache.cu
benchmark/tpch_q1/: CMakeLists.txt  tpch_q1.cu
benchmark/tpch_q1_cache/: CMakeLists.txt  tpch_q1_cache.cu
benchmark/tpch_q4/: CMakeLists.txt  tpch_q4.cu
benchmark/tpch_q4_cache/: CMakeLists.txt  tpch_q4_cache.cu
benchmark/tpch_q6/: CMakeLists.txt  tpch_q6.cu
benchmark/tpch_q6_cache/: CMakeLists.txt  tpch_q6_cache.cu
benchmark/tpch_q6_cache_eviction/: CMakeLists.txt  tpch_q6_cache_eviction.cu
benchmark/utils/: data_q4.h  utils.h
cuTFHEpp/: CMakeLists.txt
cuTFHEpp/include/: comparison.cuh  context.cuh  cuparams.cuh  cutfhe++.h  gate.cuh  gatebootstrapping.cuh  keyswitch.cuh  serialize.h  tlwe.cuh  trgsw.cuh  trlwe.cuh  types.h  utils.cuh
cuTFHEpp/include/util/: pointer.cuh
cuTFHEpp/src/: CMakeLists.txt  cutfhe++.cu
cuTFHEpp/test/: CMakeLists.txt
cuTFHEpp/test/fft/: CMakeLists.txt
cuTFHEpp/test/gatebootstrapping/: CMakeLists.txt  gatebootstrapping.cu
cuTFHEpp/test/keyswitch/: CMakeLists.txt
include/: cache_filter.h  comparison.cuh  conversion.h  correction.cuh  golfdb.h  msb.cuh  msb_utils.cuh  operator.cuh  polyeval_bsgs.h  repack.h  rlwe.cuh  tlwe.h  utils.h
src/: CMakeLists.txt  conversion.cu  golfdb.cu  polyeval_bsgs.cu  repack.cu  utils.cu
test/: CMakeLists.txt
test/comparison/: CMakeLists.txt  comparison.cu
test/msbgatebootstrapping/: CMakeLists.txt  msbgatebootstrapping.cu
